feat: 시설 상세 조회 추가